--- a/index.html
+++ b/index.html
@@ -219,11 +219,11 @@
         <div class="projects__inner">
           <div class="projects__project">
             <div class="projects__project__title"><h2>Сайт визитка</h2></div>
-            <div class="projects__project__view"><img src="assets\img\project__port.png" alt="project_port.png"></div>
+            <div class="projects__project__view"><img src="assets\img\p\Project__port.png" alt="project_port.png"></div>
           </div>
           <div class="projects__project" hidden>
             <div class="projects__project__title"><h2>Сайт визитка</h2></div>
-            <div class="projects__project__view"><img src="assets\img\project__port.png" alt="project_port.png"></div>
+            <div class="projects__project__view"><img src="assets\img\Project__port.png" alt="project_port.png"></div>
           </div>
         </div>
       </div>
