--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
     </section>
 
     <div class="bold__line"></div>
-
+<!-- temporary comment -->
     <section id="projects">
       <div class="container">
         <div class="projects__inner">
