add new view project (polar)

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </div>
     </header>
 
-    <section id="info">
+    <section class="info">
       <div class="container">
         <h1>Что такое вёрстка?</h1>
         <div class="info__text">
@@ -133,7 +133,7 @@
     
     <div class="bold__line"></div>
 
-    <section id="skills">
+    <section class="skills">
       <div class="container">
         <div class="skills__dots">
           <div class="skills__dots-box">
@@ -213,8 +213,67 @@
     </section>
 
     <div class="bold__line"></div>
-<!-- temporary comment -->
-    <section id="projects">
+
+    <section class="projects">
+      <div class="container">
+        <div class="projects-view">
+          <div class="projects-box">
+            <div class="projects-box__inner">
+              <div class="projects-hover">
+                <div class="projects-hover__title">
+                  Сайт визитка
+                </div>
+                <div class="projects-hover__btn">
+                  <a href="#"><span>Перейти</span> к просмотру</a>
+                </div>
+              </div>
+              <img src="assets/img/Project__port.png" alt="project_port.png">
+            </div>
+          </div>
+          <div class="projects-box">
+            <div class="projects-box__inner">
+              <div class="projects-hover">
+                <div class="projects-hover__title">
+                  Сайт визитка
+                </div>
+                <div class="projects-hover__btn">
+                  <a href="#"><span>Перейти</span> к просмотру</a>
+                </div>
+              </div>
+              <img src="assets/img/Project__port.png" alt="project_port.png">
+            </div>
+          </div>
+          <div class="projects-box">
+            <div class="projects-box__inner">
+              <div class="projects-hover">
+                <div class="projects-hover__title">
+                  Сайт визитка
+                </div>
+                <div class="projects-hover__btn">
+                  <a href="#"><span>Перейти</span> к просмотру</a>
+                </div>
+              </div>
+              <img src="assets/img/Project__port.png" alt="project_port.png">
+            </div>
+          </div>
+          <div class="projects-box">
+            <div class="projects-box__inner">
+              <div class="projects-hover">
+                <div class="projects-hover__title">
+                  Сайт продажи мороженного
+                </div>
+                <div class="projects-hover__btn">
+                  <a href="polar-project/index.html"><span>Перейти</span> к просмотру</a>
+                </div>
+              </div>
+              <img src="assets/img/view-polar.png" alt="View project POLAR">
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- <section id="projects">
       <div class="container">
         <div class="projects__inner">
           <div class="projects__project">
@@ -227,9 +286,9 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
-    <section id="contacts">
+    <section class="contacts">
       <div class="contacts__inner">
         <form class="contacts__input">
           <h2>Свяжитесь со мной</h2>
