--- a/polar-project/index.html
+++ b/polar-project/index.html
@@ -1,59 +1,138 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
-  <link rel="stylesheet" href="style.css">
-  <title>Document</title>
-</head>
-<body>
-  <header class="header">
-    <div class="container">
-      <div class="header__inner">
-        <div class="header__logo">
-          <img src="layout/img/logo.png" alt="logo.png">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <title>Document</title>
+  </head>
+  <body>
+    <header class="header">
+      <div class="container">
+        <div class="header__inner">
+          <div class="header__logo">
+            <img src="layout/img/logo.png" alt="logo.png" />
+          </div>
+          <div class="header__menu">
+            <nav>
+              <ol>
+                <li class="header__menu--active"><a href="">Home</a></li>
+                <li><a href="">Product</a></li>
+                <li><a href="">Pricing</a></li>
+                <li><a href="">testimonials</a></li>
+                <li><a href="">Contact Us</a></li>
+              </ol>
+            </nav>
+          </div>
+          <div class="header__btn">
+            <a class="btn" href="#" rel="noopener noreferrer">Buy now</a>
+          </div>
         </div>
-        <div class="header__menu">
-          <nav>
-            <ol>
-              <li class="header__menu__first"><a href="">Home</a></li>
-              <li><a href="">Product</a></li>
-              <li><a href="">Pricing</a></li>
-              <li><a href="">testimonials</a></li>
-              <li><a href="">Contact Us</a></li>
-            </ol>
-          </nav>
-        </div>
-        <div class="header__btn">
-          <button type="submit">Buy now</button>
+        <div class="header-content">
+          <div class="header-content__text">
+            <div class="header-text__suptitle">Sweet fun, full of milk.</div>
+            <div class="header-text__title">Feel inside cold with our delicious <span>ice-cream.</span></div>
+            <div class="header-text__description">Some food has looked so awful that it's looked like something that the dog's brought home, yet after one mouthful I've been left eating my thoughts, my words.</div>
+            <div class="header-text__link">
+              <a class="header-btn" href="#" rel="noopener noreferrer">Buy now</a>
+            </div>
+          </div>
+          <div class="header-content__images">
+            <div class="header-content__images-icecream"><img src="layout/img/icecream.png" alt="icecream"></div>
+            <div class="header-content__images-img"><img src="layout/img/icecream-effect.png" alt="icecream effect"></div>
+          </div>
+          <div class="header-content__images-bg"></div>
         </div>
       </div>
-      <div class="header__content">
-        <div class="left__column">
-          <div class="left__column__title">
-            <div class="left__column__title__st">
-              Sweet fun, full of milk.
+    </header>
+
+
+    <main class="main-content">
+        <section class="delivery">
+          <div class="container">
+            <div class="delivery__inner">
+              <div class="delivery__box">
+                <div class="delivery__box-img "><img src="layout/img/delivery-truck.svg" alt="delivery-truck"></div>
+                <div class="delivery__box-title">Delivery shipping</div>
+                <div class="delivery__box-text">Last Chance! Free shipping on all orders ends today.</div>
+              </div>
+              <div class="delivery__box">
+                <div class="delivery__box-img "><img src="layout/img/delivery-coffee.svg" alt="delivery-truck"></div>
+                <div class="delivery__box-title">Quick Packaging</div>
+                <div class="delivery__box-text">Last Chance! Free shipping on all orders ends today.</div>
+              </div>
+              <div class="delivery__box">
+                <div class="delivery__box-img "><img src="layout/img/delivery-money.svg" alt="delivery-truck"></div>
+                <div class="delivery__box-title">100% Money Back</div>
+                <div class="delivery__box-text">Last Chance! Free shipping on all orders ends today.</div>
+              </div>
+              <div class="delivery__box">
+                <div class="delivery__box-img "><img src="layout/img/delivery-fast-delivery.svg" alt="delivery-truck"></div>
+                <div class="delivery__box-title">Fast Delivery</div>
+                <div class="delivery__box-text">Last Chance! Free shipping on all orders ends today.</div>
+              </div>
             </div>
-            <div class="left__column__title__bt">
-              <h1>Feel inside cold with our delicious ice-cream.</h1>
+        </section>
+
+        <section class="details">
+          <div class="container">
+            <div class="details__inner">
+              <div class="details-text">
+                <div class="details-text__title">Brown Sugar Oatmea</div>
+                <div class="details-text__description">Together with McDonald’s, Burger King has grown to become synonymous with burgers in the US.Together with McDonald’s, Burger King has grown to become synonymous.</div>
+                <div class="details-text__link">
+                  <a class="btn" href="#" rel="noopener noreferrer">See Details</a>
+                </div>
+              </div>
+              <div class="details-img"><img src="layout/img/details-img.png" alt="details"></div>
             </div>
           </div>
-          <div class="left__column__text">
-            Some food has looked so awful that it's looked like something that the dog's brought home, yet after one mouthful I've been left eating my thoughts, my words.
+        </section>
+
+        <section class="app">
+          <div class="container">
+            <div class="app__inner">
+              <div class="app-img"><img src="layout/img/app-img.png" alt="app"></div>
+              <div class="app-text">
+                <div class="app-text__title">Simple Way To Order Your Food</div>
+                <div class="app-text__description">Some food has looked so awful that it's looked like something that the dog's brought home, yet after one mouthful I've been left eating my thoughts.</div>
+                <div class="app-text__ad-app">
+                  <div class="ad-app__item">
+                    <div class="ad-app__item-ico">
+                      <img src="layout/img/ad-app-select.svg" alt="Select.svg">
+                    </div>
+                    <div class="ad-app_item-text">Select Your Food</div>
+                  </div>
+                  <div class="ad-app__item">
+                    <div class="ad-app__item-ico">
+                      <img src="layout/img/ad-app-cart.svg" alt="Select.svg">
+                    </div>
+                    <div class="ad-app_item-text">add to cart</div>
+                  </div>
+                  <div class="ad-app__item">
+                    <div class="ad-app__item-ico">
+                      <img src="layout/img/ad-app-order.svg" alt="Select.svg">
+                    </div>
+                    <div class="ad-app_item-text">Order your food</div>
+                  </div>
+                </div>
+                <div class="app-text_app-download">
+                  <a href="#" class="app-download__link"><img src="layout/img/app-download-android.svg" alt="Google play"></a>
+                  <a href="#" class="app-download__link"><img src="layout/img/app-download-apple.svg" alt="App store"></a>
+                </div>
+                <!-- <div class="app-text__link">
+                  <a class="btn" href="#" rel="noopener noreferrer">See Details</a>
+                </div> -->
+              </div>
+            </div>
           </div>
-          <div class="left__column__btn">
-            <button type="submit">Buy now</button>
-          </div>
-        </div>
-        <div class="right__column">
-          <img src="layout\img\Ellipse 18.png" alt="Ellipse" class="icecream__bg">
-          <img src="layout\img\icecream.png" alt="icecream" class="icecream__img">
-          <img src="layout\img\icecream effect.png" alt="effect" class="icecream__effect">
-        </div>
-      </div>
-    </div>
-  </header>
-</body>
+        </section>
+
+    </main>
+
+
+  </body>
 </html>
