--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="assets/css/normalize.css" />
     <link rel="stylesheet" href="style.css" />
-    <title>Portfolio</title>
+    <title>Mazu</title>
   </head>
   <body>
     <header class="header">
@@ -180,33 +180,32 @@
             <div class="slider__item">
               <div class="slider__title"><h2>HTML</h2></div>
               <div class="slider__ico"><img src="assets/img/html.svg" alt="html"></div>
-              <div class="slider__description">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Вопрос агентство грустный до толку свой вопроса вскоре заманивший, строчка, своих проектах имени не правилами подзаголовок однажды над пунктуация рукопись.</div>
+              <div class="slider__description">Язык гипертекстовой разметки - стандартизированный язык разметки документов для просмотра веб-страниц в браузере. Веб-браузеры получают HTML документ от сервера по протоколам HTTP/HTTPS, далее интерпретируют код в интерфейс, который будет отображаться на экране монитора у пользователя.</div>
             </div>
             <div class="slider__item">
               <div class="slider__title"><h2>CSS</h2></div>
               <div class="slider__ico"><img src="assets/img/css-3.svg" alt="html"></div>
-              <div class="slider__description">Далеко-далеко, за словесными горами в стране гласных и согласных живут рыбные тексты. Пор, коварный. Своих над коварный мир переулка языкового дал залетают буквенных всемогущая, снова обеспечивает имеет запятой живет! Вдали, продолжил инициал!</div>
+              <div class="slider__description">Формальный язык описания внешнего вида веб-страницы, написанного с использованием языка разметки (HTML).</div>
             </div>
             <div class="slider__item">
               <div class="slider__title"><h2>JavaScript</h2></div>
               <div class="slider__ico"><img src="assets/img/javascript.svg" alt="html"></div>
-              <div class="slider__description">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Ведущими путь послушавшись грустный о одна. Моей, над. Большого грамматики моей коварных ты раз оксмокс, родного несколько правилами возвращайся это.
-              Напоивший подзаголовок которой образ проектах. Грамматики но речью образ осталось, точках оксмокс решила вскоре имеет его это дал прямо правилами. Своего рыбными власти пунктуация. Она речью деревни продолжил ему рукописи?</div>
+              <div class="slider__description">Мультипарадигменный язык программирования. Используется для подключение скриптов, позволяющих добавить динамики на сайте.</div>
             </div>
             <div class="slider__item">
               <div class="slider__title"><h2>wordpress</h2></div>
               <div class="slider__ico"><img src="assets/img/wordpress.svg" alt="html"></div>
-              <div class="slider__description">Далеко-далеко, за словесными горами в стране гласных и согласных живут рыбные тексты. Пор, коварный. Своих над коварный мир переулка языкового дал залетают буквенных всемогущая, снова обеспечивает имеет запятой живет! Вдали, продолжил инициал!</div>
+              <div class="slider__description">Свободно распространяемая система управления содержимым сайта с открытым исходным кодом, работающая на PHP, и использующая сервер базы данных — MySQL.</div>
             </div>
             <div class="slider__item">
               <div class="slider__title"><h2>figma</h2></div>
               <div class="slider__ico"><img src="assets/img/figma.svg" alt="html"></div>
-              <div class="slider__description">Далеко-далеко, за словесными горами в стране гласных и согласных живут рыбные тексты. Пор, коварный. Своих над коварный мир переулка языкового дал залетают буквенных всемогущая, снова обеспечивает имеет запятой живет! Вдали, продолжил инициал!</div>
+              <div class="slider__description">Верстка сайта по макету Figma</div>
             </div>
             <div class="slider__item">
               <div class="slider__title"><h2>photoshop</h2></div>
               <div class="slider__ico"><img src="assets/img/photoshop.svg" alt="html"></div>
-              <div class="slider__description">Далеко-далеко, за словесными горами в стране гласных и согласных живут рыбные тексты. Пор, коварный. Своих над коварный мир переулка языкового дал залетают буквенных всемогущая, снова обеспечивает имеет запятой живет! Вдали, продолжил инициал!</div>
+              <div class="slider__description">Верстка сайта по макету Photoshop</div>
             </div>
         </div>
       </div>
@@ -214,7 +213,7 @@
 
     <div class="bold__line"></div>
 
-    <section class="projects">
+    <section class="projects" id="projects">
       <div class="container">
         <div class="projects-view">
           <div class="projects-box">
@@ -247,13 +246,13 @@
             <div class="projects-box__inner">
               <div class="projects-hover">
                 <div class="projects-hover__title">
-                  Сайт визитка
+                  ROCC
                 </div>
                 <div class="projects-hover__btn">
-                  <a href="#"><span>Перейти</span> к просмотру</a>
+                  <a href="toothpaste-project/index.html"><span>Перейти</span> к просмотру</a>
                 </div>
               </div>
-              <img src="assets/img/Project__port.png" alt="project_port.png">
+              <img src="assets/img/projects/toothpaste-project-from-psd.png" alt="View project ROCC">
             </div>
           </div>
           <div class="projects-box">
@@ -266,7 +265,7 @@
                   <a href="polar-project/index.html"><span>Перейти</span> к просмотру</a>
                 </div>
               </div>
-              <img src="assets/img/view-polar.png" alt="View project POLAR">
+              <img src="assets/img/projects/polar-project-from-psd.png" alt="View project POLAR">
             </div>
           </div>
         </div>
@@ -288,7 +287,7 @@
       </div>
     </section> -->
 
-    <section class="contacts">
+    <section class="contacts" id="contacts">
       <div class="contacts__inner">
         <form class="contacts__input">
           <h2>Свяжитесь со мной</h2>
@@ -320,6 +319,7 @@
 
 <script src="assets/js/jquery-3.6.0.min.js"></script>
 <script src="assets/js/slick/slick.min.js"></script>
+<script src="assets/js/send.js"></script>
 <script src="assets/js/main.js"></script>
 
 
