--- a/polar-project/index.html
+++ b/polar-project/index.html
@@ -91,6 +91,194 @@
             </div>
           </div>
         </section>
+        
+        <section class="product container">
+          <h2 class="product-title">Our Product</h2>
+          <div class="product-dots">
+            <ol>
+              <li class="product-dots--active" id="icecream">ICE CREAM</li>
+              <li id="cayenne">CAYENNE CHOCOLATE</li>
+              <li id="cake">CAKE BATTER</li>
+              <li id="candy">CANDY CANE</li>
+              <li id="platters">PLATTERS</li>
+              <li id="dessert">DESSERT</li>
+            </ol>
+          </div>
+          <div class="product__inner" id="1">
+            <div class="product__item-imgleft">
+              <div class="product__item-img"><img src="layout\img\brown-bread.png" alt="Brown bread"></div>
+              <div class="product__item-text">
+                <div class="product__item-title">Brown bread</div>
+                <div class="product__item-discr">Bon Au Pain is a pioneer in the healthy fast food scene. Bon Au Pain is a pioneer in the healthy fast food scene. Bon Au Pain is a pioneer in the healthy fast food scene.</div>
+                <div class="product__item-price">$19.55 <span>$22.55</span></div>
+                <div class="product__item-link"><a href="#" class="btn">Buy Now</a></div>
+              </div>
+            </div>
+            <div class="product__item-imgright">
+              <div class="product__item-text">
+                <div class="product__item-title">Cayenne chocolate</div>
+                <div class="product__item-discr">Bon Au Pain is a pioneer in the healthy fast food scene. Bon Au Pain is a pioneer in the healthy fast food scene. Bon Au Pain is a pioneer in the healthy fast food scene.</div>
+                <div class="product__item-price">$19.55 <span>$22.55</span></div>
+                <div class="product__item-link"><a href="#" class="btn">Buy Now</a></div>
+              </div>
+              <div class="product__item-img"><img src="layout\img\cayenne-chocolate.png" alt="Cayenne chocolate"></div>
+            </div>
+            <div class="product__item-imgleft">
+              <div class="product__item-img"><img src="layout\img\sweet-corn.png" alt="Sweet corn"></div>
+              <div class="product__item-text">
+                <div class="product__item-title">Sweet corn</div>
+                <div class="product__item-discr">Bon Au Pain is a pioneer in the healthy fast food scene. Bon Au Pain is a pioneer in the healthy fast food scene. Bon Au Pain is a pioneer in the healthy fast food scene.</div>
+                <div class="product__item-price">$19.55 <span>$22.55</span></div>
+                <div class="product__item-link"><a href="#" class="btn">Buy Now</a></div>
+              </div>
+            </div>
+          </div>
+          <div class="product__inner" id="2">
+            <div class="product__item-imgleft">
+              <div class="product__item-img"><img src="layout\img\brown-bread.png" alt="Brown bread"></div>
+              <div class="product__item-text">
+                <div class="product__item-title">Brown bread</div>
+                <div class="product__item-discr">Bon Au Pain is a pioneer in the healthy fast food scene. Bon Au Pain is a pioneer in the healthy fast food scene. Bon Au Pain is a pioneer in the healthy fast food scene.</div>
+                <div class="product__item-price">$19.55 <span>$22.55</span></div>
+                <div class="product__item-link"><a href="#" class="btn">Buy Now</a></div>
+              </div>
+            </div>
+            <div class="product__item-imgright">
+              <div class="product__item-text">
+                <div class="product__item-title">Cayenne chocolate</div>
+                <div class="product__item-discr">Bon Au Pain is a pioneer in the healthy fast food scene. Bon Au Pain is a pioneer in the healthy fast food scene. Bon Au Pain is a pioneer in the healthy fast food scene.</div>
+                <div class="product__item-price">$19.55 <span>$22.55</span></div>
+                <div class="product__item-link"><a href="#" class="btn">Buy Now</a></div>
+              </div>
+              <div class="product__item-img"><img src="layout\img\cayenne-chocolate.png" alt="Cayenne chocolate"></div>
+            </div>
+            <div class="product__item-imgleft">
+              <div class="product__item-img"><img src="layout\img\sweet-corn.png" alt="Sweet corn"></div>
+              <div class="product__item-text">
+                <div class="product__item-title">Sweet corn</div>
+                <div class="product__item-discr">Bon Au Pain is a pioneer in the healthy fast food scene. Bon Au Pain is a pioneer in the healthy fast food scene. Bon Au Pain is a pioneer in the healthy fast food scene.</div>
+                <div class="product__item-price">$19.55 <span>$22.55</span></div>
+                <div class="product__item-link"><a href="#" class="btn">Buy Now</a></div>
+              </div>
+            </div>
+          </div>
+          <div class="product__inner" id="3">
+            <div class="product__item-imgleft">
+              <div class="product__item-img"><img src="layout\img\brown-bread.png" alt="Brown bread"></div>
+              <div class="product__item-text">
+                <div class="product__item-title">Brown bread</div>
+                <div class="product__item-discr">Bon Au Pain is a pioneer in the healthy fast food scene. Bon Au Pain is a pioneer in the healthy fast food scene. Bon Au Pain is a pioneer in the healthy fast food scene.</div>
+                <div class="product__item-price">$19.55 <span>$22.55</span></div>
+                <div class="product__item-link"><a href="#" class="btn">Buy Now</a></div>
+              </div>
+            </div>
+            <div class="product__item-imgright">
+              <div class="product__item-text">
+                <div class="product__item-title">Cayenne chocolate</div>
+                <div class="product__item-discr">Bon Au Pain is a pioneer in the healthy fast food scene. Bon Au Pain is a pioneer in the healthy fast food scene. Bon Au Pain is a pioneer in the healthy fast food scene.</div>
+                <div class="product__item-price">$19.55 <span>$22.55</span></div>
+                <div class="product__item-link"><a href="#" class="btn">Buy Now</a></div>
+              </div>
+              <div class="product__item-img"><img src="layout\img\cayenne-chocolate.png" alt="Cayenne chocolate"></div>
+            </div>
+            <div class="product__item-imgleft">
+              <div class="product__item-img"><img src="layout\img\sweet-corn.png" alt="Sweet corn"></div>
+              <div class="product__item-text">
+                <div class="product__item-title">Sweet corn</div>
+                <div class="product__item-discr">Bon Au Pain is a pioneer in the healthy fast food scene. Bon Au Pain is a pioneer in the healthy fast food scene. Bon Au Pain is a pioneer in the healthy fast food scene.</div>
+                <div class="product__item-price">$19.55 <span>$22.55</span></div>
+                <div class="product__item-link"><a href="#" class="btn">Buy Now</a></div>
+              </div>
+            </div>
+          </div>
+          <div class="product__inner" id="4">
+            <div class="product__item-imgleft">
+              <div class="product__item-img"><img src="layout\img\brown-bread.png" alt="Brown bread"></div>
+              <div class="product__item-text">
+                <div class="product__item-title">Brown bread</div>
+                <div class="product__item-discr">Bon Au Pain is a pioneer in the healthy fast food scene. Bon Au Pain is a pioneer in the healthy fast food scene. Bon Au Pain is a pioneer in the healthy fast food scene.</div>
+                <div class="product__item-price">$19.55 <span>$22.55</span></div>
+                <div class="product__item-link"><a href="#" class="btn">Buy Now</a></div>
+              </div>
+            </div>
+            <div class="product__item-imgright">
+              <div class="product__item-text">
+                <div class="product__item-title">Cayenne chocolate</div>
+                <div class="product__item-discr">Bon Au Pain is a pioneer in the healthy fast food scene. Bon Au Pain is a pioneer in the healthy fast food scene. Bon Au Pain is a pioneer in the healthy fast food scene.</div>
+                <div class="product__item-price">$19.55 <span>$22.55</span></div>
+                <div class="product__item-link"><a href="#" class="btn">Buy Now</a></div>
+              </div>
+              <div class="product__item-img"><img src="layout\img\cayenne-chocolate.png" alt="Cayenne chocolate"></div>
+            </div>
+            <div class="product__item-imgleft">
+              <div class="product__item-img"><img src="layout\img\sweet-corn.png" alt="Sweet corn"></div>
+              <div class="product__item-text">
+                <div class="product__item-title">Sweet corn</div>
+                <div class="product__item-discr">Bon Au Pain is a pioneer in the healthy fast food scene. Bon Au Pain is a pioneer in the healthy fast food scene. Bon Au Pain is a pioneer in the healthy fast food scene.</div>
+                <div class="product__item-price">$19.55 <span>$22.55</span></div>
+                <div class="product__item-link"><a href="#" class="btn">Buy Now</a></div>
+              </div>
+            </div>
+          </div>
+          <div class="product__inner" id="5">
+            <div class="product__item-imgleft">
+              <div class="product__item-img"><img src="layout\img\brown-bread.png" alt="Brown bread"></div>
+              <div class="product__item-text">
+                <div class="product__item-title">Brown bread</div>
+                <div class="product__item-discr">Bon Au Pain is a pioneer in the healthy fast food scene. Bon Au Pain is a pioneer in the healthy fast food scene. Bon Au Pain is a pioneer in the healthy fast food scene.</div>
+                <div class="product__item-price">$19.55 <span>$22.55</span></div>
+                <div class="product__item-link"><a href="#" class="btn">Buy Now</a></div>
+              </div>
+            </div>
+            <div class="product__item-imgright">
+              <div class="product__item-text">
+                <div class="product__item-title">Cayenne chocolate</div>
+                <div class="product__item-discr">Bon Au Pain is a pioneer in the healthy fast food scene. Bon Au Pain is a pioneer in the healthy fast food scene. Bon Au Pain is a pioneer in the healthy fast food scene.</div>
+                <div class="product__item-price">$19.55 <span>$22.55</span></div>
+                <div class="product__item-link"><a href="#" class="btn">Buy Now</a></div>
+              </div>
+              <div class="product__item-img"><img src="layout\img\cayenne-chocolate.png" alt="Cayenne chocolate"></div>
+            </div>
+            <div class="product__item-imgleft">
+              <div class="product__item-img"><img src="layout\img\sweet-corn.png" alt="Sweet corn"></div>
+              <div class="product__item-text">
+                <div class="product__item-title">Sweet corn</div>
+                <div class="product__item-discr">Bon Au Pain is a pioneer in the healthy fast food scene. Bon Au Pain is a pioneer in the healthy fast food scene. Bon Au Pain is a pioneer in the healthy fast food scene.</div>
+                <div class="product__item-price">$19.55 <span>$22.55</span></div>
+                <div class="product__item-link"><a href="#" class="btn">Buy Now</a></div>
+              </div>
+            </div>
+          </div>
+          <div class="product__inner" id="6">
+            <div class="product__item-imgleft">
+              <div class="product__item-img"><img src="layout\img\brown-bread.png" alt="Brown bread"></div>
+              <div class="product__item-text">
+                <div class="product__item-title">Brown bread</div>
+                <div class="product__item-discr">Bon Au Pain is a pioneer in the healthy fast food scene. Bon Au Pain is a pioneer in the healthy fast food scene. Bon Au Pain is a pioneer in the healthy fast food scene.</div>
+                <div class="product__item-price">$19.55 <span>$22.55</span></div>
+                <div class="product__item-link"><a href="#" class="btn">Buy Now</a></div>
+              </div>
+            </div>
+            <div class="product__item-imgright">
+              <div class="product__item-text">
+                <div class="product__item-title">Cayenne chocolate</div>
+                <div class="product__item-discr">Bon Au Pain is a pioneer in the healthy fast food scene. Bon Au Pain is a pioneer in the healthy fast food scene. Bon Au Pain is a pioneer in the healthy fast food scene.</div>
+                <div class="product__item-price">$19.55 <span>$22.55</span></div>
+                <div class="product__item-link"><a href="#" class="btn">Buy Now</a></div>
+              </div>
+              <div class="product__item-img"><img src="layout\img\cayenne-chocolate.png" alt="Cayenne chocolate"></div>
+            </div>
+            <div class="product__item-imgleft">
+              <div class="product__item-img"><img src="layout\img\sweet-corn.png" alt="Sweet corn"></div>
+              <div class="product__item-text">
+                <div class="product__item-title">Sweet corn</div>
+                <div class="product__item-discr">Bon Au Pain is a pioneer in the healthy fast food scene. Bon Au Pain is a pioneer in the healthy fast food scene. Bon Au Pain is a pioneer in the healthy fast food scene.</div>
+                <div class="product__item-price">$19.55 <span>$22.55</span></div>
+                <div class="product__item-link"><a href="#" class="btn">Buy Now</a></div>
+              </div>
+            </div>
+          </div>
+        </section>
 
         <section class="app">
           <div class="container">
@@ -102,19 +290,19 @@
                 <div class="app-text__ad-app">
                   <div class="ad-app__item">
                     <div class="ad-app__item-ico">
-                      <img src="layout/img/ad-app-select.svg" alt="Select.svg">
+                      <img src="layout/img/ad-app-select.svg" alt="ad-app-select.svg">
                     </div>
                     <div class="ad-app_item-text">Select Your Food</div>
                   </div>
                   <div class="ad-app__item">
                     <div class="ad-app__item-ico">
-                      <img src="layout/img/ad-app-cart.svg" alt="Select.svg">
+                      <img src="layout/img/ad-app-cart.svg" alt="ad-app-cart.svg">
                     </div>
-                    <div class="ad-app_item-text">add to cart</div>
+                    <div class="ad-app_item-text">Add to cart</div>
                   </div>
                   <div class="ad-app__item">
                     <div class="ad-app__item-ico">
-                      <img src="layout/img/ad-app-order.svg" alt="Select.svg">
+                      <img src="layout/img/ad-app-order.svg" alt="ad-app-order.svg">
                     </div>
                     <div class="ad-app_item-text">Order your food</div>
                   </div>
@@ -130,9 +318,70 @@
             </div>
           </div>
         </section>
-
     </main>
 
-
+    <section class="question">
+      <div class="question__inner">
+      <div class="question-title">Have Question in Mind? <br /> Let us help you</div>
+      <form class="question-form" method="post">
+        <input type="text" id="question" placeholder="Enter your question">
+        <button type="submit">Send</button>
+      </form>
+      </div>
+    </section>
+    <footer class="footer">
+      <div class="container footer__inner">
+        <div class="footer-text">
+          <div class="footer-text__logo"><img src="layout/img/logo.png" alt="logo.png"></div>
+          <div class="footer-text_discription">Some food has looked so awful that it's looked like something that the dog's brought home.</div>
+          <div class="footer-text__follow">
+            <h4>Follow us</h4>
+            <div class="footer-text__follow-img">
+              <a href="#"><img src="layout\img\facebook.png" alt="facebook"></a>
+              <a href="#"><img src="layout\img\twitter.png" alt="twitter"></a>
+              <a href="#"><img src="layout\img\instagram.png" alt="instagram"></a>
+              <a href="#"><img src="layout\img\linkedin.png" alt="linkedin"></a>
+            </div>
+          </div>
+        </div>
+        <div class="footer-menu">
+          <div class="footer-menu__first">
+            <ol>
+              <li><a href="#">Home</a></li>
+              <li><a href="#">Product</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Pricing</a></li>
+              <li><a href="#">Testimonials</a></li>
+              <li><a href="#">Contact Us</a></li>
+            </ol>
+          </div>
+          <div class="footer-menu__second">
+            <ol>
+              <li><a href="#">Delivery Information</a></li>
+              <li><a href="#">Privacy Policy</a></li>
+              <li><a href="#">Terms & Condition</a></li>
+              <li><a href="#">Search Terms</a></li>
+              <li><a href="#">Order & Return</a></li>
+            </ol>
+          </div>
+        </div>
+        <div class="footer-email">
+          <h3>Newsletter</h3>
+          <form action="" method="post">
+            <input type="email" name="subscribe" id="subscribe" placeholder="Your Email">
+            <button type="submit">Subscribe</button>
+          </form>
+          <div class="footer-email__ico">
+            <ol>
+              <li><a href=""><img src="layout\img\paypal.png" alt="paypal"></a></li>
+              <li><a href=""><img src="layout\img\mastercard.png" alt="mastercard"></a></li>
+              <li><a href=""><img src="layout\img\visa.png" alt="visa"></a></li>
+            </ol>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <script src="..\assets\js\jquery-3.6.0.min.js"></script>
+    <script src="layout\js\main.js"></script>
   </body>
 </html>
