add new site view

--- a/index.html
+++ b/index.html
@@ -233,13 +233,13 @@
             <div class="projects-box__inner">
               <div class="projects-hover">
                 <div class="projects-hover__title">
-                  Сайт визитка
+                  Сайт студии
                 </div>
                 <div class="projects-hover__btn">
-                  <a href="#"><span>Перейти</span> к просмотру</a>
+                  <a href="florence/index.html"><span>Перейти</span> к просмотру</a>
                 </div>
               </div>
-              <img src="assets/img/Project__port.png" alt="project_port.png">
+              <img src="assets/img/Project__port.png" alt="View project Florence Blog">
             </div>
           </div>
           <div class="projects-box">
