--- a/index.html
+++ b/index.html
@@ -293,13 +293,13 @@
           <h2>Свяжитесь со мной</h2>
           <input type="email" name="email" id="email" placeholder="Здесь введите свой email">
           <textarea type="text" name="text" id="" placeholder="Здесь напечатайте абзацы своего текста">Здравствуйте! Мне нужна вёрстка по макету...</textarea>
-          <button type="button"">Отправить</button>
+          <button type="button">Отправить</button>
         </form>
         <div class="contacts__other">
           <h2>Ещё способы связаться со мной</h2>
           <div class="contacts__contact">Моя почта: <a href = "mailto:zaskok20@yandex.ru">zaskok20@yandex.ru</a></div>
           <div class="contacts__contact"><a href="https://t.me/MazuSad" target="_blank" rel="noopener noreferrer">Telegram</a></div>
-          <div class="contacts__contact"><a href="http://vk.com/dimitry_i" target="_blank" rel="noopener noreferrer">Vk</a></div>
+          <!-- <div class="contacts__contact"><a href="http://vk.com/dimitry_i" target="_blank" rel="noopener noreferrer">Vk</a></div> -->
         </div>
       </div>
     </section>
