--- a/index.html
+++ b/index.html
@@ -220,13 +220,13 @@
             <div class="projects-box__inner">
               <div class="projects-hover">
                 <div class="projects-hover__title">
-                  Сайт визитка
+                  Сайт мобильного приложения
                 </div>
                 <div class="projects-hover__btn">
-                  <a href="#"><span>Перейти</span> к просмотру</a>
+                  <a href="Doo\index.html"></a><span>Перейти</span> к просмотру</a>
                 </div>
               </div>
-              <img src="assets/img/Project__port.png" alt="project_port.png">
+              <!-- <img src="" alt="View project "> -->
             </div>
           </div>
           <div class="projects-box">
