--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                   <a href="Doo\index.html"></a><span>Перейти</span> к просмотру</a>
                 </div>
               </div>
-              <!-- <img src="" alt="View project "> -->
+              <img src="assets\img\projects\dimmazz.github.io_portfolio_Doo-psd=.png" alt="View project ">
             </div>
           </div>
           <div class="projects-box">
