--- a/index.html
+++ b/index.html
@@ -233,13 +233,13 @@
             <div class="projects-box__inner">
               <div class="projects-hover">
                 <div class="projects-hover__title">
-                  Сайт студии
+                  Блог разработчика
                 </div>
                 <div class="projects-hover__btn">
-                  <a href="florence/index.html"><span>Перейти</span> к просмотру</a>
+                  <a href="Ryan.Warner/index.html"><span>Перейти</span> к просмотру</a>
                 </div>
               </div>
-              <img src="assets/img/projects/portfolio_florence_index-psd.png" alt="View project Florence Blog">
+              <img src="assets/img/projects/ryan-warner-from-psd.png" alt="View project Florence Blog">
             </div>
           </div>
           <div class="projects-box">
