--- a/Ryan.Warner/articles.html
+++ b/Ryan.Warner/articles.html
@@ -17,14 +17,22 @@
 
   <header class="header">
     <a href="/"><div class="header-logo"><img src="img\icons\Heart.svg" alt="logo">Ryan Warner</div></a>
-    <menu class="menu-header">
+    <nav class="menu-header">
       <li><a href="articles.html">Articles</a></li>
-      <li><a href="#">Snippets</a></li>
+      <li><a href="snippets.html">Snippets</a></li>
       <li><a href="about.html">About</a></li>
-      <li><a href="#" class="border">Contact</a></li>
-    </menu>
+      <li><a href="#footer" class="border">Contact</a></li>
+    </nav>
+    <div class="header-nav">
+      <h2>Menu</h2>
+      <nav class="menu-small-header">
+        <li><a href="articles.html">Articles</a></li>
+        <li><a href="snippets.html">Snippets</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="#footer">Contact</a></li>
+      </nav>
+    </div>
   </header>
-</div>
 
 
 <div class="container">
@@ -56,7 +64,7 @@
 </div>
 
 
-<footer class="footer">
+<footer class="footer" id="footer">
   <div class="footer__inner">
     <div class="footer-copy">
       <p>Designed and developed by Ryan Warner.</p>
