--- a/index.html
+++ b/index.html
@@ -223,10 +223,10 @@
                   Сайт мобильного приложения
                 </div>
                 <div class="projects-hover__btn">
-                  <a href="Doo\index.html"></a><span>Перейти</span> к просмотру</a>
+                  <a href="Doo/index.html"><span>Перейти</span> к просмотру</a>
                 </div>
               </div>
-              <img src="assets\img\projects\dimmazz.github.io_portfolio_Doo-psd=.png" alt="View project ">
+              <img src="assets/img/projects/dimmazz.github.io_portfolio_Doo-psd=.png" alt="View project Mobile app">
             </div>
           </div>
           <div class="projects-box">
