--- a/Ryan.Warner/index.html
+++ b/Ryan.Warner/index.html
@@ -22,13 +22,12 @@
       <li><a href="#" class="border">Contact</a></li>
     </nav>
     <div class="header-nav">
-      nav
-
+      <h2>Menu</h2>
       <nav class="menu-small-header">
         <li><a href="articles.html">Articles</a></li>
-        <li><a href="#">Snippets</a></li>
+        <li><a href="snippets.html">Snippets</a></li>
         <li><a href="about.html">About</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="#footer">Contact</a></li>
       </nav>
     </div>
   </header>
@@ -96,7 +95,7 @@
   <a href="#"><div class="btn-chat">Chat</div></a>
 </section>
 
-<footer class="footer">
+<footer class="footer" id="footer">
   <div class="footer__inner">
     <div class="footer-copy">
       <p>Designed and developed by Ryan Warner.</p>
