--- a/Ryan.Warner/index.html
+++ b/Ryan.Warner/index.html
@@ -17,9 +17,9 @@
     <a href="/"><div class="header-logo"><img src="img\icons\Heart.svg" alt="logo">Ryan Warner</div></a>
     <nav class="menu-header">
       <li><a href="articles.html">Articles</a></li>
-      <li><a href="#">Snippets</a></li>
+      <li><a href="snippets.html">Snippets</a></li>
       <li><a href="about.html">About</a></li>
-      <li><a href="#" class="border">Contact</a></li>
+      <li><a href="#footer" class="border">Contact</a></li>
     </nav>
     <div class="header-nav">
       <h2>Menu</h2>
