--- a/Ryan.Warner/snippets.html
+++ b/Ryan.Warner/snippets.html
@@ -12,7 +12,7 @@
 <body>
   <div class="container">
     <header class="header">
-      <a href="/"><div class="header-logo"><img src="img\icons\Heart.svg" alt="logo">Ryan Warner</div></a>
+      <a href="/Ryan.Warner"><div class="header-logo"><img src="img\icons\Heart.svg" alt="logo">Ryan Warner</div></a>
       <nav class="menu-header">
         <li><a href="articles.html">Articles</a></li>
         <li><a href="snippets.html">Snippets</a></li>
