--- a/Ryan.Warner/about.html
+++ b/Ryan.Warner/about.html
@@ -16,7 +16,7 @@
 <div class="container">
 
   <header class="header">
-    <a href="/Ryan.Warner"><div class="header-logo"><img src="img\icons\Heart.svg" alt="logo">Ryan Warner</div></a>
+    <a href="portfolio/Ryan.Warner"><div class="header-logo"><img src="img\icons\Heart.svg" alt="logo">Ryan Warner</div></a>
     <nav class="menu-header">
       <li><a href="articles.html">Articles</a></li>
       <li><a href="snippets.html">Snippets</a></li>
