--- a/Ryan.Warner/index.html
+++ b/Ryan.Warner/index.html
@@ -14,7 +14,7 @@
 <div class="container">
 
   <header class="header">
-    <a href="portfolio/Ryan.Warner"><div class="header-logo"><img src="img\icons\Heart.svg" alt="logo">Ryan Warner</div></a>
+    <a href="index.html"><div class="header-logo"><img src="img\icons\Heart.svg" alt="logo">Ryan Warner</div></a>
     <nav class="menu-header">
       <li><a href="articles.html">Articles</a></li>
       <li><a href="snippets.html">Snippets</a></li>
@@ -39,7 +39,7 @@
     <section class="articles">
       <div class="articles__upper">
         <h3>Latest Articles</h3>
-        <a href="#" class="articles-all">All articles<img src="img\icons\arrows-right.svg" alt=""></a>
+        <a href="/portfolio/Ryan.Warner/articles.html" class="articles-all">All articles<img src="img\icons\arrows-right.svg" alt=""></a>
       </div>
       <div class="articles__content">
         <div class="articles__item">
