add new site (Infinizai)

--- a/index.html
+++ b/index.html
@@ -246,13 +246,13 @@
             <div class="projects-box__inner">
               <div class="projects-hover">
                 <div class="projects-hover__title">
-                  ROCC
+                  Проект Infinizai
                 </div>
                 <div class="projects-hover__btn">
-                  <a href="toothpaste-project/index.html"><span>Перейти</span> к просмотру</a>
+                  <a href="infinizai/index.html"><span>Перейти</span> к просмотру</a>
                 </div>
               </div>
-              <img src="assets/img/projects/toothpaste-project-from-psd.png" alt="View project ROCC">
+              <img src="assets/img/projects/portfolio_infinizai_index.html.png" alt="View project Infinizai">
             </div>
           </div>
           <div class="projects-box">
