--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                   <a href="infinizai/index.html"><span>Перейти</span> к просмотру</a>
                 </div>
               </div>
-              <img src="assets/img/projects/portfolio_infinizai_index.html.png" alt="View project Infinizai">
+              <img src="assets/img/projects/portfolio_infinizai_index-from-psd.png" alt="View project Infinizai">
             </div>
           </div>
           <div class="projects-box">
@@ -271,21 +271,6 @@
         </div>
       </div>
     </section>
-
-    <!-- <section id="projects">
-      <div class="container">
-        <div class="projects__inner">
-          <div class="projects__project">
-            <div class="projects__project__title"><h2>Сайт визитка</h2></div>
-            <div class="projects__project__view"><img src="assets/img/Project__port.png" alt="project_port.png"></div>
-          </div>
-          <div class="projects__project" hidden>
-            <div class="projects__project__title"><h2>Сайт визитка</h2></div>
-            <div class="projects__project__view"><img src="assets/img/Project__port.png" alt="project_port.png"></div>
-          </div>
-        </div>
-      </div>
-    </section> -->
 
     <section class="contacts" id="contacts">
       <div class="contacts__inner">
@@ -308,7 +293,7 @@
         <div class="footer__inner">
           <div class="cop">
           Moskow. 2020-<script type="text/javascript">dt = new Date();document.write(dt.getFullYear());</script>.<br />
-          Копирование материалов с сайта не желательно :)
+          Копирование материалов с сайта запрещено!
         </div>
       </div>
     </footer>
